<resources>
    <string name="app_name">EasyLearn</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="easylern_text">Учитесь легко</string>
    <string name="easywrite_text">Пишите легко</string>
    <string name="reg">Регистрация</string>
    <string name="username">Логин</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="ent">Вход</string>
    <string name="welcome_text">Привет ученик!</string>
    <string name="text_questoin">Что будем изучать сегодня?</string>
    <string name="text_selecting_topics">Привет! Я твой помощник в написании сочинений! Давай для начала определимся с направлением</string>
    <string name="learnMaterials_text">Учебные материалы</string>
    <string name="theory_text">Теория по заданиям</string>
    <string name="explanation">Определение</string>
    <string-array name="spinner_topic">
        <item>Выберите тему:</item>
        <item>внутренний мир и его качества</item>
        <item>отношение человека к другому человеку, нравственные идеалы и выбор между добром и злом</item>
        <item>познание человеком самого себя</item>
        <item>свобода человека и её ограничения</item>
        <item>семья, род; семейные ценности и традиции</item>
        <item>человек и общество</item>
        <item>родина, государство, гражданская позиция человека</item>
        <item>природа и человек</item>
        <item>наука и человек</item>
        <item>искусство и человек</item>
        <item>язык и языковая личность</item>
    </string-array>
    <string-array name="spinner_example">
        <item>Выберите пример:</item>
        <item>введение</item>
        <item>аргумент</item>
        <item>заключение</item>
    </string-array>
    <string name="zero">0:00</string>
    <string name="easylearn_easylearn">О нас: EasyLearn– Ваш надежный помощник в обучении написанию сочинений! \n\nДобро пожаловать в мир EasyLearn– инновационное приложение, разработанное специально для студентов и всех, кто стремится улучшить свои навыки написания сочинений. Наша миссия– сделать процесс обучения простым, увлекательным и доступным каждому.</string>
    <string-array name="spinner_bug_report">
        <item>Выберите раздел приложения:</item>
        <item>Учебные материалы</item>
        <item>Практика</item>
        <item>Библиотека</item>
        <item>Аккаунт</item>
        <item>Другое</item>
    </string-array>
    <string-array name="spinner_mode">
        <item>Выберите модель:</item>
        <item>Проверка текста - тест!</item>
        <item>Помощь с конструкциями</item>
    </string-array>
</resources>